# dopacrm

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.claude/commands/: build-backend-feature.md  build-frontend-feature.md  read-data-model.md  read-docs.md  read-standards.md
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: error_handler.py
backend/app/core/: celery_app.py  config.py  feature_flags.py  logger.py  security.py  time.py  token_blacklist.py
backend/app/domain/: exceptions.py
backend/app/services/: attendance_service.py  coach_service.py  gym_class_service.py  lead_service.py  member_service.py  membership_plan_service.py  payment_service.py  schedule_materialize.py  schedule_service.py  subscription_service.py  tenant_service.py  user_service.py
backend/app/workers/: schedule_tasks.py  subscription_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_users_companies_tokens.py  0002_expand_tenants.py  0003_create_saas_plans.py  0004_expand_tenants_and_users.py  0005_create_members.py  0006_create_classes.py  0007_create_membership_plans_and_entitlements.py  0008_create_subscriptions.py  0009_add_subscription_payment_method.py  0010_create_class_entries.py  0011_create_coaches.py  0012_create_schedule_and_feature_flags.py  0013_create_leads.py  (+1 more)
backend/scripts/: create_super_admin.py  export_openapi.py  seed_test_gym.py
backend/tests/: conftest.py
docker/loki/: loki-config.yml
docker/promtail/: promtail-config.yml
docs/: backend.md  crm_logic.md  frontend.md  mobile-setup.md  spec.md  specs.md
docs/features/: attendance.md  auth.md  classes.md  coaches.md  companies.md  feature-flags.md  leads.md  members.md  membership-plans.md  payments.md  roles.md  saas-plans.md  schedule.md  subscriptions.md  tenants.md  users.md
docs/security/: README.md  cross-tenant-isolation.md
docs/skills/: build-backend-feature.md  build-frontend-feature.md
docs/standards/: 4-layer-example-users.md  api.md  architecture.md  env.md  feature-docs.md  git.md  project-structure.md  python.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
loadtests/: test_attendance_load.py  test_auth_load.py  test_classes_load.py  test_plans_load.py  test_subscriptions_load.py  test_tenants_load.py  test_users_load.py
(+322 files in other folders)
